--- a/biome.json
+++ b/biome.json
@@ -19,7 +19,8 @@
         "noNonNullAssertion": "off"
       },
       "complexity": {
-        "noForEach": "off"
+        "noForEach": "off",
+        "noStaticOnlyClass": "off"
       }
     }
   }
