dev: script for on chain test flow

--- a/.env.template
+++ b/.env.template
@@ -18,6 +18,9 @@ TENDERLY_ACCOUNT_SLUG=
 TENDERLY_PROJECT_SLUG=
 TENDERLY_ACCESS_TOKEN=
 
+# User private key for on chain simulation script
+USER_PK=
+
 # Agent settings
 AGENT_NAME=paraswap
 AGENT_URL=localhost:4001
